# wedding-race

./: .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE.md  README.md  docker-compose.yml  eslint.config.mjs  jest.config.cjs  jest.setup.cjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  general_issue.yml
.github/workflows/: backend-tests.yml  (+6 more)
.husky/: pre-commit
app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
backend/: pyproject.toml
backend/tests/: test_main.py
components/: backtotop.tsx  countdown.tsx  getting-soon-letter.tsx  gettingSoonLetter.tsx  giftsSection.tsx  guestInformation.tsx  invitetext.tsx  onTheDaySection.tsx  overlayCardGrid.tsx  overlaycard.tsx  pagecard.tsx  pageshell.tsx  preWeddingSection.tsx  quizsuggestions.tsx  rsvpFormClient.tsx  rsvpGuest.tsx  songrequests.tsx  venueSection.tsx  weddingTimeline.tsx  welcomeSection.tsx
db/: neon.ts
frontend/: .env.example  Dockerfile  next.config.mjs  package.json  tsconfig.json
playwright-tests/: 01_pages_load.spec.ts  02_invite_code.spec.ts
scripts/: copy-standalone-assets.mjs
styles/: homepage.module.css  rsvp.module.css  theme.ts
tests/: 01_pages_load.spec.ts  initial_load.spec.ts
types/: index.d.ts
wedding-race-backend/: Dockerfile  main.py  requirements.txt  test_main.py
wedding-race-frontend/: .prettierignore  Dockerfile  next.config.mjs  package.json
(+97 files in other folders)
