[tool.poetry]
package-mode = false

[project]
name = "wedding-race"
authors = [
    {name = "cjrace",email = "52536248+cjrace@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "datetime (>=5.5,<6.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
